--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <meta charset="utf-8">
-    <title>宜垦购</title>
+    <title>宜垦购ttttt</title>
     <meta id="keywords" name="keywords" content="{$config['keywords']}">
     <meta id="description" name="description" content="{$config['discription']}">
     <link rel="shortcut icon" href="favicon.ico" />
